2017-09-02  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-787

	* Temperature changed from being treated as a formal pnd/psd input
	variable, to be an auxiliary variable that is always at hand. This
	means that "Temperature" no longer shall be included in
	pnd_agenda_input_names. So e.g.:

	ArrayOfStringSet( pnd_agenda_input_names, [ "IWC", "Temperature" ] )

	shall be changed to

	ArrayOfStringSet( pnd_agenda_input_names, [ "IWC"] )

	* src/m_microphysics.cc (psdMH97,psdF07): Temperature now taken
	from pnd_agenda_input_t.

	(psdW16): As above and also added t_min, t_max and picky.

	* src/agendas.cc (define_agenda_data): Removed jacobian as input
	to inversion_iterate_agenda. Not needed after Simon's improvement
	of x2artsStandard. And added pnd_agenda_input_t as input to
	pnd_agenda_array.

	* src/workspace.cc (define_wsv_data): Introduced pnd_agenda_input_t.

2017-09-01 Richard Larsson  <ric.larsson@gmail.com>

	* arts-2-3-786
	
	* src/m_fos.cc:  Added a iyHybrid2 that is splitting up the call
	to the *and_tmat functionality and also changing the averaging
	over levels.  (Make average of all the source term on a level 
	rather than the individual elements.)
	
	* controlfiles/artscomponents/hybridscat/TestHybrid.arts: 
	Added new method to test
	
	* src/rte.{cc, h}:  Added scattering source for single level.
	Makes a lot of unecessary calls because of a failed check which
	is still being investigated...

2017-09-01  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-785

	* cmake/modules/ArtsTestcases.cmake:

	Explicitly pass include path to ignore the environment variable
	ARTS_INCLUDE_PATH. Otherwise the test can break depending on the user's
	environment.

	Remove special cases for cmake 2.6 which we don't support anymore.

2017-09-01 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-784

	* src/m_fos.cc (iyHybrid):
	Removed a leftover debugging write out.

	* src/m_rt4.cc (RT4Calc):
	Set dummy surface_skin_t when initializing.
