@@ -1,3 +1,14 @@
+2017-09-03 Jana Mendrok  <jana.mendrok@chalmers.se>
+
+	* arts-2-3-788
+
+	* src/m_microphysics.cc (psdMH97,psdF07,psdW16):
+	Partly revert of arts-2-3-787 - move check of s/i/rwc back to beginning
+	of level-loop, before the t-range check. this as we loop over full
+	cloudbox here, and of course the cloudbox can contain levels with t that
+	are outside the valid t-range of a hydrometeor. as long as the wc for
+	this hydrometeor is 0, that's perfectly fine.
+
 2017-09-02  Patrick Eriksson  <patrick.eriksson@chalmers.se>
 
 	* arts-2-3-787
